devel
-----

* issue #3504: added option `--force-same-database` for arangorestore

  with this option set to true, it is possible to make any arangorestore attempt
  fail if the specified target database does not match the database name
  specified in the source dump's "dump.json" file. it can thus be used to
  prevent restoring data into the "wrong" database

  The option is set to `false` by default to ensure backwards-compatibility

* UI: updated dygraph js library to version 2.1.0

* honor specified COLLECT method in AQL COLLECT options
  
  for example, when the user explicitly asks for the COLLECT method
  to be `sorted`, the optimizer will now not produce an alternative
  version of the plan using the hash method.
  
  additionally, if the user explcitly asks for the COLLECT method to
  be `hash`, the optimizer will now change the existing plan to use
  the hash method if possible instead of just creating an alternative
  plan.
  
  `COLLECT ... OPTIONS { method: 'sorted' }` => always use sorted method
  `COLLECT ... OPTIONS { method: 'hash' }`   => use hash if this is technically possible
  `COLLECT ...` (no options)                 => create a plan using sorted, and another plan using hash method

* added C++ implementation for AQL function `SHA512()`

* added AQL function `IS_KEY`
  this function checks if the value passed to it can be used as a document key,
  i.e. as the value of the `_key` attribute

* add AQL functions `SORTED` and `SORTED_UNIQUE`
  
  `SORTED` will return a sorted version of the input array using AQL's internal 
  comparison order
  `SORTED_UNIQUE` will do the same, but additionally removes duplicates.

* Added C++ implementation for the AQL TRANSLATE function

* renamed arangoimp to arangoimport for consistency
  Release packages will still install arangoimp as a symlink so user scripts 
  invoking arangoimp do not need to be changed

* UI: Shard distribution view now has an accordion view instead of displaying