@@ -25,6 +25,7 @@
 
 #include "ApplicationFeatures/ApplicationFeature.h"
 #include "V8Client/ArangoClientHelper.h"
+#include "Shell/ClientFeature.h"
 
 namespace arangodb {
 namespace httpclient {
@@ -45,6 +46,8 @@ class ImportFeature final : public application_features::ApplicationFeature,
   void start() override;
 
  private:
+  int tryCreateDatabase(ClientFeature*, std::string const& name);
+
   std::string _filename;
   bool _useBackslash;
   bool _convert;
@@ -54,6 +57,7 @@ class ImportFeature final : public application_features::ApplicationFeature,
   std::string _fromCollectionPrefix;
   std::string _toCollectionPrefix;
   bool _createCollection;
+  bool _createDatabase;
   std::string _createCollectionType;
   std::string _typeImport;
   std::vector<std::string> _translations;
@@ -65,7 +69,6 @@ class ImportFeature final : public application_features::ApplicationFeature,
   bool _ignoreMissing;
   std::string _onDuplicateAction;
   uint64_t _rowsToSkip;
-
   int* _result;
 };
 }
