@@ -441,6 +441,37 @@ function importTestSuite () {
       assertEqual(expected, actual);
     },
 
+////////////////////////////////////////////////////////////////////////////////
+/// @brief test database creation
+////////////////////////////////////////////////////////////////////////////////
+    testCreateDatabase : function () {
+      var db = require("@arangodb").db;
+      var testdb = db._useDatabase("UnitTestImportCreateDatabase");
+      var expected = [ { "id": 1,
+                         "one": 1,
+                         "three": 3,
+                         "two": 2 },
+                       { "a": 1234,
+                         "b": "the quick fox",
+                         "id": 2,
+                         "jumped":
+                         "over the fox",
+                         "null": null },
+                       { "id": 3,
+                         "not": "important",
+                         "spacing": "is" },
+                       { "  c  ": "h\"'ihi",
+                         "a": true,
+                         "b": false,
+                         "d": "",
+                         "id": 4 },
+                       { "id": 5 } ];
+
+      var actual = getQueryResults("FOR i IN UnitTestsImportJson1 SORT i.id RETURN i");
+      assertEqual(expected, actual);
+    },
+
+// END OF TEST DEFINITIONS /////////////////////////////////////////////////////
   };
 }
 
